force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
<description>Patient visit booking and follow-up scheduling.</description>
<label>Appointment</label>
<nameField>
<displayFormat>APT-{000000}</displayFormat>
<label>Appointment Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Appointments</pluralLabel>
<sharingModel>Private</sharingModel>
</CustomObject>