force-app/main/default/objects/Appointment__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New consult</fullName>
            </value>
            <value>
                <fullName>Diabetes follow-up</fullName>
            </value>
            <value>
                <fullName>Discovery consult</fullName>
            </value>
            <value>
                <fullName>CGM review</fullName>
            </value>
            <value>
                <fullName>90-day review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>