force-app/main/default/objects/Appointment__c/fields/Booked_Via__c.field-meta.xml
<CustomField>
    <fullName>Booked_Via__c</fullName>
    <label>Booked Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Front desk</fullName>
            </value>
            <value>
                <fullName>Counsellor</fullName>
            </value>
            <value>
                <fullName>Patient app</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>