force-app/main/default/objects/Appointment__c/fields/Check_In_At__c.field-meta.xml
<CustomField>
    <fullName>Check_In_At__c</fullName>
    <label>Check-In At</label>
    <type>DateTime</type>
</CustomField>