force-app/main/default/objects/Appointment__c/fields/Checkin_Sent__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Sent__c</fullName>
    <label>Reminder &amp; check-in flags</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>