force-app/main/default/objects/Appointment__c/fields/Clearance__c.field-meta.xml
<CustomField>
    <fullName>Clearance__c</fullName>
    <label>Clearance Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Cleared with conditions</fullName>
            </value>
            <value>
                <fullName>Not suitable</fullName>
            </value>
            <value>
                <fullName>Needs tests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>