force-app/main/default/objects/Appointment__c/fields/Follow_Up_Reason__c.field-meta.xml
<CustomField>
<fullName>Follow_Up_Reason__c</fullName>
<label>Follow-Up Reason</label>
<type>TextArea</type>
<length>255</length>
</CustomField>