force-app/main/default/objects/Appointment__c/fields/Followup_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Followup_Interval_Days__c</fullName>
    <label>Follow-up Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>