force-app/main/default/objects/Appointment__c/fields/HIS_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>HIS_Appointment_Id__c</fullName>
    <label>HIS Appointment ID</label>
    <length>64</length>
    <type>Text</type>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>