force-app/main/default/objects/Appointment__c/fields/Mode__c.field-meta.xml
<CustomField>
<fullName>Mode__c</fullName>
<label>Mode</label>
<type>Picklist</type>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Video</fullName>
</value>
<value>
<fullName>Phone</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>