force-app/main/default/objects/Appointment__c/fields/No_Show__c.field-meta.xml
<CustomField>
    <fullName>No_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder &amp; check-in flags</label>
    <type>Checkbox</type>
</CustomField>