force-app/main/default/objects/Appointment__c/fields/Outcome_Synced_At__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Synced_At__c</fullName>
    <label>Outcome Synced At</label>
    <type>DateTime</type>
</CustomField>