force-app/main/default/objects/Appointment__c/fields/Patient__c.field-meta.xml
<CustomField>
<fullName>Patient__c</fullName>
<label>Patient</label>
<type>Lookup</type>
<required>true</required>
<referenceTo>Account</referenceTo>
<relationshipLabel>Patient Records</relationshipLabel>
<relationshipName>Patient</relationshipName>
</CustomField>