force-app/main/default/objects/Appointment__c/fields/Provider__c.field-meta.xml
<CustomField>
<fullName>Provider__c</fullName>
<label>Provider</label>
<type>Lookup</type>
<referenceTo>Provider__c</referenceTo>
<relationshipLabel>Provider Records</relationshipLabel>
<relationshipName>AppointmentProvider</relationshipName>
</CustomField>