force-app/main/default/objects/Appointment__c/fields/Recommendation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>