force-app/main/default/objects/Appointment__c/fields/Reminder_24h_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_24h_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder &amp; check-in flags</label>
    <type>Checkbox</type>
</CustomField>