force-app/main/default/objects/Appointment__c/fields/Teleconsult_Consent__c.field-meta.xml
<CustomField>
<fullName>Teleconsult_Consent__c</fullName>
<label>Teleconsult Consent</label>
<type>Checkbox</type>
<defaultValue>false</defaultValue>
</CustomField>