force-app/main/default/objects/Appointment__c/APT_Teleconsult_Consent.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_Teleconsult_Consent</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Mode__c,&apos;Video&apos;) || ISPICKVAL(Mode__c,&apos;Phone&apos;)) &amp;&amp; ISPICKVAL(Status__c,&apos;Completed&apos;) &amp;&amp; NOT(Teleconsult_Consent__c)</errorConditionFormula>
    <errorMessage>Tele-consultation consent is required.</errorMessage>
</ValidationRule>